--- a/Views/Classes/Edit.cshtml
+++ b/Views/Classes/Edit.cshtml
@@ -1,26 +1,26 @@
 ﻿@model SchoolAdministrationSystem.Data.Class
 
 @{
-    ViewData["Title"] = "Edit Class";
+    ViewData["Title"] = "Редактиране на клас";
 }
 
-<h1 class="text-2xl font-semibold mb-6">Edit Class</h1>
+<h1 class="text-2xl font-semibold mb-6">Редактиране</h1>
 
 <div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md">
-    <h4 class="text-lg font-semibold mb-4">Class Information</h4>
+    <h4 class="text-lg font-semibold mb-4">Информация на класа</h4>
     <hr class="mb-6" />
 
     <form asp-action="Edit" class="space-y-6">
         <div class="form-group">
-            <label asp-for="Speciality" class="block font-medium text-gray-700">Speciality</label>
+            <label asp-for="Speciality" class="block font-medium text-gray-700">Клас</label>
             <input asp-for="Speciality" class="form-control block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500" />
             <span asp-validation-for="Speciality" class="text-danger"></span>
         </div>
 
         <div class="form-group">
-            <label asp-for="TeacherId" class="block font-medium text-gray-700">Teacher</label>
+            <label asp-for="TeacherId" class="block font-medium text-gray-700">Класен ръководител</label>
             <select asp-for="TeacherId" class="form-control block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500" asp-items="ViewBag.TeacherId">
-                <option value="">Select Teacher</option>
+                <option value="">Изберете учител</option>
             </select>
             <span asp-validation-for="TeacherId" class="text-danger"></span>
         </div>
@@ -32,13 +32,13 @@
             <!-- Back to List Button (on the left) -->
             <div class="flex items-center">
                 <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline font-medium">
-                    Back to List
+                    Назад
                 </a>
             </div>
             <!-- Save Button (on the right) -->
             <div>
                 <button type="submit" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
-                    Save
+                    Запази
                 </button>
             </div>
         </div>
